# gphoto2immich

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: ci.yml
packaging/arch/: PKGBUILD
packaging/systemd/: env.example  fujimmich.service  gphoto2immich.service
src/: config.rs  job.rs  main.rs  notifications.rs  pipeline.rs  stack_tracker.rs
src/camera/: callbacks.rs  connection.rs  download.rs  ffi.rs  gphoto.rs  mod.rs  object_info.rs  session.rs
src/immich/: cache.rs  mod.rs  search.rs  stack.rs  upload.rs
